# GoogleHackathonNammaKrushi

./: .env.example  .gitignore  .python-version  AGENTS.md  BUSINESS_INTELLIGENCE_SYSTEM.md  DISEASE_RESEARCH_SYSTEM.md  LICENSE  NAMMA_KRUSHI_MCP_GUIDE.md  README.md  main.py  namma_krushi.db  pyproject.toml  seed_demo_data.py  seed_trends_data.py  test_mcp_server.py
DOCS/: CODE_PRACTICES_RULES.md  Gemini_Live_Implementation.md  PROJECT_MODEL.md  PROJECT_MODEL_DRAFT.md  Quick_Setup_Guide.md  Technical_Implementation.md  adk.md
exp/: test.ipynb  test.py
exp/a2a/: crop_disease.py
exp/adk/: agent.py  test.py
src/: app.py  gemini_live_app.py  gemini_live_app_voice.py  namma_krushi.db
src/app/: main.py
src/app/api/: auth.py  business_intelligence.py  chat.py  consumer_prices.py  crops.py  daily_logs.py  disease_research.py  farmer_profile.py  farms.py  gemini_live.py  reports.py  sales.py  schemes.py  streaming_auth.py  todos.py  weather.py
src/app/config/: database.py  settings.py
src/app/mcp/: __init__.py  main.py  server.py
src/app/mcp/config/: __init__.py  mcp_settings.py
src/app/mcp/prompts/: __init__.py  agricultural_prompts.py
src/app/mcp/resources/: __init__.py  crop_calendar.py  disease_database.py
src/app/mcp/security/: __init__.py  zero_retention.py
src/app/mcp/tools/: __init__.py  disease_analysis.py  search_tools.py  soil_tools.py  weather_tools.py
src/app/models/: __init__.py  chat.py  consumer_price.py  crop.py  crop_recommendation.py  daily_log.py  farm.py  farmer_profile.py  government_scheme.py  research_report.py  sale.py  soil_analysis.py  todo.py  user.py  weather.py
src/app/schemas/: __init__.py  auth.py  chat.py  consumer_price.py  crop.py  crop_recommendation.py  daily_log.py  farm.py  farmer_profile.py  government_scheme.py  research_report.py  sale.py  scheme.py  soil_analysis.py  todo.py  user.py  weather.py
src/app/services/: gemini_ai.py  gemini_live_service.py  gemini_streaming_service.py  integrated_disease_research_service.py  research_report_service.py  scheme_search_service.py  soil_analysis_service.py
src/app/services/deep_research/: business_intelligence_research.py  deep_research_diseaase.py
src/app/tools/: __init__.py  crop_analysis.py  crop_management.py  daily_log_management.py  exa_search.py  registry.py  registry_standalone.py  sales_management.py  scheme_search.py  search.py  soil_analysis.py  weather.py
src/app/utils/: auth.py  json_serializer.py
